--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,13 @@
 Package: R.cache
 ===============
 
+Version: 0.1.8 [2009-07-29]
+o ROBUSTNESS: Added sanity check to readCacheHeader() testing 
+  that the read header identifier is non-empty.  This results
+  in a clearer error message that before.
+o CLEAN UP: Renamed the HISTORY file to NEWS.
+
+
 Version: 0.1.7 [2008-02-27]
 o Added option to updated the "last-modified" timestamp of cache 
   files whenever they are loaded via loadCache(). This will help
