--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,10 @@
 Package: R.cache
 ===============
 
+Version: 0.3.0 [2010-03-13]
+o Added a NAMESPACE.
+
+
 Version: 0.2.0 [2009-10-16]
 o BUG FIX: In R v2.10.0 and newer, we would get an error reporting that
   internal function loadFromConn() does not exists.
