--- a/inst/NEWS
+++ b/inst/NEWS
@@ -17,7 +17,7 @@ o BUG FIX (for R v2.12.2 and before): After adding support for
 
 
 Version: 0.5.0 [2011-08-16]
-o Added support for saving and loaded compressed cache files.
+o Added support for saving and loading compressed cache files.
 o ROBUSTNESS: Now findCache() asserts that any identified cache 
   file is really a file.
 o CLEANUP: Now package uses packageStartupMessage() instead of cat().
