--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,14 @@
 Package: R.cache
 ===============
 
+Version: 0.5.4 [2011-12-30]
+o As before, the cache root path defaults to ~/.Rcache/. However,
+  if it does not exists, then it is created when the package is loaded,
+  after approval from the user (via a textual prompt). If not, or not 
+  not possible to prompt the user, then a session-specific temporary
+  directory is used.
+
+
 Version: 0.5.3 [2011-12-29]
 o Now getCachePath() and setCacheRootPath() add a README.txt file to
   the root path, iff missing. It explains why the directory structure
