--- a/inst/NEWS
+++ b/inst/NEWS
@@ -6,8 +6,9 @@ Version: 0.6.0 [2011-12-30]
 o As before, the cache root path defaults to ~/.Rcache/. However,
   if it does not exists, then it is created when the package is loaded,
   but only after approval by the user (via a textual prompt). If not
-  approved, or it is not possible to prompt the user, then a 
-  session-specific temporary directory is used.
+  approved, or it is not possible to prompt the user (e.g. in a 
+  non-interactive session), then a session-specific temporary directory
+  is used.
 
 
 Version: 0.5.3 [2011-12-29]
