--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,11 @@
 Package: R.cache
 ===============
 
+Version: 0.6.1 [2012-01-22]
+o Updated the README that is copied to the .Rcache directory.
+o Updated package dependencies.
+
+
 Version: 0.6.0 [2011-12-30]
 o As before, the cache root path defaults to ~/.Rcache/. However,
   if it does not exists, then it is created when the package is loaded,
