--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,14 @@
 Package: R.cache
 ================
 
+Version: 0.6.3 [2012-09-10]
+o Renamed the installed .Rcache/ directory to _Rcache/ to avoid
+  R CMD check NOTEs.
+o CRAN POLICY: Removed one last call to .Internal() for loading
+  saved data.  This could be done in a backward-compatible way
+  using readRDS().
+
+
 Version: 0.6.2 [2012-03-20]
 o CRAN POLICY: Dropped an explicit call to an .Internal() function.
 
