--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,12 @@
 Package: R.cache
 ================
 
+Version: 0.7.0 [2012-11-17]
+o Added internal .assertDigest(), which originates from aroma.core.
+o CLEANUP: Package is now only imports other packages, no long
+  depends (loads) them.
+
+
 Version: 0.6.4 [2012-10-16]
 o ROBUSTNESS/BUG FIX: No longer passing '...' to NextMethod(), cf.
   R-devel thread 'Do *not* pass '...' to NextMethod() - it'll do it 
