--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,11 +2,11 @@
 Package: R.cache
 ================
 
-Version: 0.7.0 [2012-11-17]
+Version: 0.6.5 [2012-11-18]
 o ROBUSTNESS: Now package declares S3 methods in the namespace.
 o CLEANUP: Now package exports a smaller set of the methods.  
-o CLEANUP: Package is now only imports other packages, no long
-  depends (loads) them.
+o CLEANUP: Package now only imports R.methodsS3 and R.oo, no long
+  depends (loads) them.  It still needs to load R.utils.
 o Added internal .assertDigest(), which originates from aroma.core.
 
 
