--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,10 @@
 Package: R.cache
 ================
 
+Version: 0.6.6 [2012-11-27]
+o BUG FIX: clearCache() would give error "object 'dirs' not found".
+
+
 Version: 0.6.5 [2012-11-18]
 o ROBUSTNESS: Now package declares S3 methods in the namespace.
 o CLEANUP: Now package exports a smaller set of the methods.  
