--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,10 @@
 Package: R.cache
 ================
 
+Version: 0.6.8 [2012-12-19]
+o Utilizing new startupMessage() of R.oo.
+
+
 Version: 0.6.7 [2012-11-28]
 o Added support for clearCache(..., recursive=TRUE).
 
