--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,11 @@
 Package: R.cache
 ================
 
+Version: 0.6.9 [2013-05-20]
+o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.
+o Bumped package dependencies.
+
+
 Version: 0.6.8 [2012-12-19]
 o Utilizing new startupMessage() of R.oo.
 
