--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,10 @@
 Package: R.cache
 ================
 
+Version: 0.6.10 [2013-05-25]
+o Minor speedup of loadCache() - replaced an rm() call with NULL assignment.
+
+
 Version: 0.6.9 [2013-05-20]
 o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.
 o Bumped package dependencies.
