--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,10 @@
 Package: R.cache
 ================
 
+Version: 0.7.3 [2013-08-18]
+o Now clearCache() is exported.
+
+
 Version: 0.7.2 [2013-08-03]
 o Bumped package dependencies.
 o BUG FIX: R.cache:::.assertDigest() called from within another package
