--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,10 @@
 Package: R.cache
 ================
 
+Version: 0.7.4 [2013-08-20]
+o Now explicitly importing one function from 'utils' in NAMESPACE.
+
+
 Version: 0.7.3 [2013-08-18]
 o Now clearCache() is exported.
 
