--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,15 @@
 Package: R.cache
 ================
 
+Version: 0.8.1 [2013-09-06]
+o Bumped package dependencies.
+
+
+Version: 0.8.0 [2013-08-21]
+o Now R.utils is no longer attached ("loaded") - only imported.
+o Added system tests.
+
+
 Version: 0.7.4 [2013-08-20]
 o Now explicitly importing one function from 'utils' in NAMESPACE.
 
