--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,7 +2,7 @@
 Package: R.cache
 ================
 
-Version: 0.8.1 [2013-09-06]
+Version: 0.8.1 [2013-09-15]
 o Bumped package dependencies.
 
 
@@ -16,7 +16,7 @@ o Now explicitly importing one function from 'utils' in NAMESPACE.
 
 
 Version: 0.7.3 [2013-08-18]
-o Now clearCache() is exported.
+o Now clearCache() is exported (rexported from R.oo).
 
 
 Version: 0.7.2 [2013-08-03]
