--- a/inst/NEWS
+++ b/inst/NEWS
@@ -4,7 +4,7 @@ Package: R.cache
 
 Version: 0.8.1 [2013-09-15]
 o CLEANUP: Now only importing a minimal set of functions needed
-  from the 'R.utils' package.
+  from the 'R.oo' and the 'R.utils' packages.
 o Bumped package dependencies.
 
 
