--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,10 @@
 Package: R.cache
 ================
 
+Version: 0.8.3 [2013-10-03]
+o Bumped package dependencies.
+
+
 Version: 0.8.2 [2013-09-28]
 o Now the 'R.cache' Package object is also available when the
   package is only loaded (but not attached).
