Spell checked NEWS
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/r-dots/pkg/R.cache@1824 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -41,7 +41,7 @@ o Now explicitly importing one function from 'utils' in NAMESPACE.
 
 
 Version: 0.7.3 [2013-08-18]
-o Now clearCache() is exported (rexported from R.oo).
+o Now clearCache() is exported (re-exported from R.oo).
 
 
 Version: 0.7.2 [2013-08-03]
