--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,8 +2,12 @@
 Package: R.cache
 ================
 
+Version: 0.9.1 [2013-12-21]
+o Added argument 'path' and 'rootPath' to getCachePath().
+
+
 Version: 0.9.0 [2013-10-17]
-o BUG FIX: If the package was only loaded but not attached, the cache 
+o BUG FIX: If the package was only loaded but not attached, the cache
   root path would default to ~/.Rcache/, which in turn could cause
   that path to be create without asking the user.  For instance,
   R.cache::loadCache(list()) would do.  Thanks to Kurt Hornik at
