o Added argument 'pathname' to saveCache().
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/r-dots/pkg/R.cache@1895 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -4,6 +4,7 @@ Package: R.cache
 
 Version: 0.9.1 [2013-12-21]
 o Added argument 'path' and 'rootPath' to getCachePath().
+o Added argument 'pathname' to saveCache().
 
 
 Version: 0.9.0 [2013-10-17]
