--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,12 @@
 Package: R.cache
 ================
 
+Version: 0.9.2 [2014-01-13]
+o All call to internal generateCache() with key=NULL would give a
+  hard-to-understand error message.  Now it's more informative.
+o Bumped package dependencies.
+
+
 Version: 0.9.1 [2013-12-21]
 o Added arguments 'path' and 'rootPath' to getCachePath().
 o Added argument 'pathname' to saveCache().
