--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@
 Package: R.cache
 ================
 
+Version: 0.9.3 [2014-01-30]
+o Bumped package dependencies.
+
+
 Version: 0.9.2 [2014-01-13]
 o All call to internal generateCache() with key=NULL would give a
   hard-to-understand error message.  Now it's more informative.
