--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@
 Package: R.cache
 ================
 
+Version: 0.9.4 [2014-04-46]
+o CLEANUP: Minimize use of '::'.
+
+
 Version: 0.9.3 [2014-01-30]
 o Bumped package dependencies.
 
