--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,12 @@
 Package: R.cache
 ================
 
+Version: 0.11.0 [2014-09-05]
+o Now package imports rather than suggests the 'digest' package.
+  This simplifies installation/usage of the package.
+o Bumped package dependencies.
+
+
 Version: 0.10.0 [2014-06-10]
 o Bumped package dependencies.
 
