--- a/NEWS
+++ b/NEWS
@@ -2,10 +2,11 @@
 Package: R.cache
 ================
 
-Version: 0.11.1-9000 [2015-02-27]
+Version: 0.11.1-9000 [2015-11-10]
 o SPEEDUP: Now memoizedCall() generates cache pathname only once.
 o Now all prompt and verbose messages are send to the standard
   error (instead of the standard output).
+o CLEANUP: Dropped argument 'verbose' from memoizedCall().
 
 
 Version: 0.11.1 [2014-09-10]
