--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@
 Package: R.cache
 ================
 
-Version: 0.11.1-9000 [2015-11-10]
+Version: 0.12.0 [2015-11-11]
 o SPEEDUP: Now memoizedCall() generates cache pathname only once.
 o Now all prompt and verbose messages are send to the standard
   error (instead of the standard output).
