--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@
 Package: R.cache
 ================
 
+Version: 0.12.0-9000 [2015-12-08]
+o Now package gives more informative error messages in the
+  rare cases it fail to create the cache root directory.
+
+
 Version: 0.12.0 [2015-11-12]
 o SPEEDUP: Now memoizedCall() generates cache pathname only once.
 o Now all prompt and verbose messages are send to the standard
