--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Package: R.cache
 ================
 
-Version: 0.12.0-9000 [2017-12-29]
+Version: 0.12.0-9000 [2018-01-03]
  
 NEW FEATURES:
  
@@ -15,6 +15,10 @@ NEW FEATURES:
    This provides an easy mechanism for temporarily disabling R.cache.
 
  o Harmonized R.cache options to all have names prefixed with 'R.cache.'.
+
+SOFTWARE QUALITY:
+ 
+ o TESTS: Increased test coverage.
 
 DEPRECATED & DEFUNCT:
  
