--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 Package: R.cache
 ================
 
+Version: 0.13.0-9000 [2018-01-04]
+
+ o ...
+
+
 Version: 0.13.0 [2018-01-03]
 
 SIGNIFICANT CHANGES:
