TESTS: Test for new defunct settings

--- a/NEWS
+++ b/NEWS
@@ -15,10 +15,10 @@ SIGNIFICANT CHANGES:
    '%USERPROFILE%/AppData/Local, e.g. 'C:/Users/alice/AppData/Local'.
    If R.cache fails find a proper OS-specific cache folder, it will fall back
    to using ~/.Rcache as the previously done.
-   Importantly, if ~/.Rcache already exists, then that will be used by default.
-   This is done in order to not loose previously cached files.  Users with
-   an existing  folder who wish to move to the new standard need to remove
-   the `~/.Rcache` folder manually.
+   Importantly, if ~/.Rcache already exists, then that will be used by
+   default.  This is done in order to not loose previously cached files.
+   Users with an existing folder who wish to move to the new standard need to
+   remove the `~/.Rcache` folder manually.
 
 DEPRECATED & DEFUNCT:
  
