--- a/NEWS
+++ b/NEWS
@@ -13,12 +13,12 @@ SIGNIFICANT CHANGES:
    On modern versions of Microsoft Windows, environment variables such
    as 'LOCALAPPDATA' will be used, which typically resolves to
    '%USERPROFILE%/AppData/Local, e.g. 'C:/Users/alice/AppData/Local'.
-   If R.cache fails find a proper OS-specific cache folder, it will fall back
-   to using ~/.Rcache as the previously done.
+   If R.cache fails find a proper OS-specific cache folder, it will fall
+   back to using ~/.Rcache as previously done.
    Importantly, if ~/.Rcache already exists, then that will be used by
-   default.  This is done in order to not loose previously cached files.
-   Users with an existing folder who wish to move to the new standard need to
-   move or remove the ~/.Rcache folder manually.
+   default.  This is done in order to not lose previously cached files.
+   Users with an existing folder who wish to move to the new standard need
+   to move or remove the ~/.Rcache folder manually.
 
 DEPRECATED & DEFUNCT:
  
