--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 Package: R.cache
 ================
 
+Version: 0.14.0-9000 [2019-12-06]
+
+ * ...
+ 
+
 Version: 0.14.0 [2019-12-05]
 
 SIGNIFICANT CHANGES:
