--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 Package: R.cache
 ================
 
+Version: 0.15.0-9000 [2021-04-30]
+
+ * ...
+ 
+
 Version: 0.15.0 [2021-04-27]
 
 SIGNIFICANT CHANGES:
